--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -10,6 +10,8 @@
 	
 	<a href="egg.usdz" rel="ar">
 		<img src="egg.png" width=200>
+	<a href="Drilling_Rig.usdz" rel="ar">
+		<img src="Drilling_Rig.png" width=200>
 	</a>
 </body>
 </html>
