--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AR Library</title>
+	<title>charity: water AR</title>
 <head>
 
 <body>
-	<h1>Welcome to the AR Library</h1>
-	<p>Welcome to the AR Library website.</p>
+	<h1>charity: water AR Drilling Rig</h1>
+	<p>Welcome to the charity: water AR test.</p>
 	
 	<a href="egg.usdz" rel="ar">
 		<img src="egg.png" width=200>
