--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -6,7 +6,7 @@
 
 <body>
 	<h1>charity: water AR</h1>
-	<p>Welcome to the charity: water AR test.</p>
+	<p>Welcome to the charity: water AR testing page.</p>
 	
 	<a href="egg.usdz" rel="ar">
 		<img src="egg.png" width=200>
