--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -5,7 +5,7 @@
 <head>
 
 <body>
-	<h1>charity: water AR</h1>
+	<h1>charity: water AR Test</h1>
 	<p>Welcome to the charity: water AR testing page.</p>
 	
 	<a href="egg.usdz" rel="ar">
