--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -12,6 +12,8 @@
 		<img src="egg.png" width=200>
 	<a href="Drilling_Rig.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=200>
+	<a href="Drilling_Rig_Ani.usdz" rel="ar">
+		<img src="Drilling_Rig.png" width=200>
 	</a>
 </body>
 </html>
