--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -13,7 +13,7 @@
 	<a href="Drilling_Rig.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=200>
 	<a href="Drilling_Rig_Ani.usdz" rel="ar">
-		<img src="Drilling_Rig.png" width=200> <p>animation</p>
+		<img src="Drilling_Rig.png" width=200>
 	</a>
 </body>
 </html>
