--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -8,11 +8,11 @@
 	<h1>charity: water AR Test</h1>
 	<p>Welcome to the charity: water AR testing page.</p>
 	
-	<a href="egg.usdz" rel="ar">
-		<img src="egg.png" width=200>
 	<a href="Drilling_Rig.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=200>
 	<a href="Drilling_Rig_Ani.usdz" rel="ar">
+		<img src="Drilling_Rig.png" width=200>
+	<a href="drillingrig2018.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=200>
 	</a>
 </body>
