--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -7,13 +7,14 @@
 <body>
 	<h1>charity: water AR Test</h1>
 	<p>Welcome to the charity: water AR testing page.</p>
+	<p>(1)Yellow Thunder static (2)Yellow Thunder animation (3)New Rig</p>
 	
 	<a href="Drilling_Rig.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=200>
 	<a href="Drilling_Rig_Ani.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=200>
 	<a href="drillingrig2018.usdz" rel="ar">
-		<img src="Drilling_Rig.png" width=200>
+		<img src="drillingrig2018.png" width=200>
 	</a>
 </body>
 </html>
