--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -7,14 +7,22 @@
 <body>
 	<h1>charity: water AR Test</h1>
 	<p>Welcome to the charity: water AR testing page.</p>
-	<p>(1)Yellow Thunder static (2)Yellow Thunder animation (3)New Rig</p>
 	
 	<a href="Drilling_Rig.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=400>
+		
+	<p>(1)Yellow Thunder static</p>
+		
 	<a href="Drilling_Rig_Ani.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=400>
+		
+	<p>(2)Yellow Thunder animation</p>
+		
 	<a href="drillingrig2018.usdz" rel="ar">
 		<img src="drillingrig2018.png" width=400>
+		
+	<p>(3)New Rig</p>
+		
 	</a>
 </body>
 </html>
