--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -10,19 +10,17 @@
 	
 	<a href="Drilling_Rig.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=400>
-		
-	<p>(1)Yellow Thunder static</p>
+	</a>
+	<p>(1) Yellow Thunder static</p>
 		
 	<a href="Drilling_Rig_Ani.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=400>
-		
-	<p>(2)Yellow Thunder animation</p>
+	</a>
+	<p>(2) Yellow Thunder animation</p>
 		
 	<a href="drillingrig2018.usdz" rel="ar">
 		<img src="drillingrig2018.png" width=400>
-		
-	<p>(3)New Rig</p>
-		
 	</a>
+	<p>(3) New Rig 2018</p>
 </body>
 </html>
