--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -22,5 +22,14 @@
 		<img src="drillingrig2018.png" width=400>
 	</a>
 	<p>(3) New Rig 2018</p>
+	
+	<div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/901625220ade4d2c813fc75112897ee4/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+    <a href="https://sketchfab.com/models/901625220ade4d2c813fc75112897ee4?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">charity: water - 2018 Drilling Rig</a>
+    by <a href="https://sketchfab.com/jimmycheung?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">jimmycheung</a>
+    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+</p>
+</div>
 </body>
 </html>
