--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -22,5 +22,10 @@
 		<img src="drillingrig2018.png" width=400>
 	</a>
 	<p>(3) New Rig 2018</p>
+	
+	<a href="waterwell.usdz" rel="ar">
+		<img src="drillingrig2018.png" width=400>
+	</a>
+	<p>(4) The Well</p>
 </body>
 </html>
