--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -24,7 +24,7 @@
 	<p>(3) New Rig 2018</p>
 	
 	<a href="waterwell.usdz" rel="ar">
-		<img src="drillingrig2018.png" width=400>
+		<img src="waterwell.png" width=400>
 	</a>
 	<p>(4) The Well</p>
 </body>
