--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -8,24 +8,19 @@
 	<h1>charity: water AR Test</h1>
 	<p>Welcome to the charity: water AR testing page.</p>
 	
-	<a href="Drilling_Rig.usdz" rel="ar">
+	<a href="YellowThunder.usdz" rel="ar">
 		<img src="Drilling_Rig.png" width=400>
 	</a>
-	<p>(1) Yellow Thunder static</p>
-		
-	<a href="Drilling_Rig_Ani.usdz" rel="ar">
-		<img src="Drilling_Rig.png" width=400>
-	</a>
-	<p>(2) Yellow Thunder animation</p>
+	<p>(1) Yellow Thunder</p>
 		
 	<a href="drillingrig2018.usdz" rel="ar">
 		<img src="drillingrig2018.png" width=400>
 	</a>
-	<p>(3) New Rig 2018</p>
+	<p>(2) New Rig 2018</p>
 	
 	<a href="waterwell.usdz" rel="ar">
 		<img src="waterwell.png" width=400>
 	</a>
-	<p>(4) The Well</p>
+	<p>(3) Afridev Hand Pump</p>
 </body>
 </html>
