--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -9,14 +9,14 @@
 	<p>Welcome to the charity: water AR testing page.</p>
 	
 	<a href="YellowThunder.usdz" rel="ar">
-		<img src="Drilling_Rig.png" width=400>
+		<img src="YellowThunder.png" width=400>
 	</a>
 	<p>(1) Yellow Thunder</p>
 		
 	<a href="drillingrig2018.usdz" rel="ar">
 		<img src="drillingrig2018.png" width=400>
 	</a>
-	<p>(2) New Rig 2018</p>
+	<p>(2) New Drilling Rig</p>
 	
 	<a href="waterwell.usdz" rel="ar">
 		<img src="waterwell.png" width=400>
