--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -7,6 +7,7 @@
 <body>
 	<h1>charity: water AR Test</h1>
 	<p>Welcome to the charity: water AR testing page.</p>
+	<p>Please run on an iOS (12.0 or above) device.</p>
 	
 	<a href="YellowThunder.usdz" rel="ar">
 		<img src="YellowThunder.png" width=400>
