--- a/ARWebsite.html
+++ b/ARWebsite.html
@@ -18,7 +18,7 @@
 	<a href="drillingrig2018.usdz" rel="ar">
 		<img src="drillingrig2018.png" width=400>
 	</a>
-	<p>(2) New Drilling Rig</p>
+	<p>(2) Time Machine</p>
 	
 	<a href="waterwell.usdz" rel="ar">
 		<img src="waterwell.png" width=400>
